# karaoke-tools

./: README.md  align_ass.py  cjk_utils.py  gui.py  main.py  merge.py  mpv.py  nlp.py  pyproject.toml  romaji_utils.py  subs.py  timing.py  utils.py
examples/: gurenge_jp.txt
nlp/: __init__.py  fugashi.py  kakasi.py
tests/: test_cjk_utils.py  test_romaji_utils.py
