[project]
name = "karaoke-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi[unidic,unidic-lite,unidict]>=1.5.2",
    "ipadic>=1.0.0",
    "pykakasi>=2.3.0",
    "pyqt6>=6.11.0",
    "pysubs2>=1.8.1",
    "unidic-lite>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
